--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ nav ul li a {
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="resume">Download CV</a>
+            <a href="resume.jpg">Download CV</a>
         </center>
         </div>
         
